--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,13 @@ __pycache__/
 *.pywz
 *.pyzw
 *.pyzwz
+
+venv/
+
+# Environment variables
+.env
+.env.local
+.env.production
+
+# Config file with sensitive data
+config.py
